--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
+    "@storybook/builder-webpack5": "^6.5.0-alpha.12",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +21,7 @@
     "react-redux": "^7.2.3",
     "react-scripts": "5.0.0",
     "redux": "^4.0.5",
+    "terser-webpack-plugin": "^5.3.0",
     "typescript": "^4.1.2",
     "uuid": "^8.0.0",
     "web-vitals": "^2.1.3"
@@ -60,12 +62,12 @@
     ]
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.4.10",
-    "@storybook/addon-essentials": "^6.4.10",
-    "@storybook/addon-links": "^6.4.10",
-    "@storybook/node-logger": "^5.3.22",
-    "@storybook/preset-create-react-app": "^4.0.0",
-    "@storybook/react": "^6.4.10",
+    "@storybook/addon-actions": "^6.1.15",
+    "@storybook/addon-essentials": "^6.1.15",
+    "@storybook/addon-links": "^6.1.15",
+    "@storybook/node-logger": "^6.1.15",
+    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/react": "^6.1.15",
     "jest-image-snapshot": "^4.5.1",
     "jest-puppeteer": "^6.0.3",
     "puppeteer": "^13.0.1",
