--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.3",
     "react-scripts": "5.0.0",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.4.1",
     "terser-webpack-plugin": "^5.3.0",
     "typescript": "^4.1.2",
     "uuid": "^8.0.0",
